--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"prepare": "husky install"
 	},
+	"lint-staged": {
+		"**/*": "prettier --write --ignore-unknown"
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/hozlucas28/NodeJS-Course-III-2023.git"
