Create new script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "Repository of NodeJS course (part three) of Midudev.",
 	"main": "index.js",
 	"scripts": {
+		"start:API": "node --watch src/index.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"prepare": "husky install"
 	},
